Add analyzer to build system.
Change-Id: I93da53eae42d91419cc5bb4d55e7ce87eadd2551

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,6 +246,16 @@ add_executable(aomenc
                $<TARGET_OBJECTS:aom_encoder_app_util>
                $<TARGET_OBJECTS:aom_encoder_stats>)
 
+if (CONFIG_ANALYZER)
+add_executable(analyzer
+               "${AOM_ROOT}/examples/analyzer.cc"
+               $<TARGET_OBJECTS:aom_common_app_util>
+               $<TARGET_OBJECTS:aom_decoder_app_util>)
+set(AOM_APP_TARGETS ${AOM_APP_TARGETS} analyzer)
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} $ENV{WX_CXXFLAGS})
+set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} $ENV{WX_LDFLAGS})
+endif ()
+
 add_executable(decode_to_md5
                "${AOM_ROOT}/examples/decode_to_md5.c"
                $<TARGET_OBJECTS:aom_common_app_util>
