Add test data download support to the cmake build.
WIP/DO NOT REVIEW

BUG=https://bugs.chromium.org/p/aomedia/issues/detail?id=76

Change-Id: I8f6dff99e413b799bed67ad0d5ecafc6c0197e22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ include("${AOM_ROOT}/build/cmake/aom_optimization.cmake")
 include("${AOM_ROOT}/aom_dsp/aom_dsp.cmake")
 include("${AOM_ROOT}/av1/av1.cmake")
 include("${AOM_ROOT}/test/test.cmake")
+include("${AOM_ROOT}/test/test-data.cmake")
 
 set(AOM_RTCD_SOURCES
     "${AOM_CONFIG_DIR}/aom_dsp_rtcd.h"
