Add inspect CLI tool and Emscripten build tools.
Change-Id: Id9159456084582b393c66c1b2c0bbb0a783350b0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,6 +271,11 @@ add_executable(simple_decoder
                $<TARGET_OBJECTS:aom_common_app_util>
                $<TARGET_OBJECTS:aom_decoder_app_util>)
 
+add_executable(inspect
+               "${AOM_ROOT}/examples/inspect.c"
+               $<TARGET_OBJECTS:aom_common_app_util>
+               $<TARGET_OBJECTS:aom_decoder_app_util>)
+
 add_executable(simple_encoder
                "${AOM_ROOT}/examples/simple_encoder.c"
                $<TARGET_OBJECTS:aom_common_app_util>
