Handle dylib exports in the CMake build.
WIP: macos/linux only so far, and not ready for testing.

BUG=aomedia:76

Change-Id: I55919a31f24b206bfd7c06418277cab9b05855ee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,6 +393,11 @@ if ("${CMAKE_GENERATOR}" MATCHES "Makefiles$" )
                         RUNTIME_OUTPUT_DIRECTORY "${AOM_CONFIG_DIR}/examples")
 endif ()
 
+if (BUILD_SHARED_LIBS)
+  include("${AOM_ROOT}/build/cmake/shared_lib_util.cmake")
+  setup_exports_target()
+endif ()
+
 # Aomedia documentation rule.
 if (ENABLE_DOCS)
   include(FindDoxygen)
