Add CONFIG_DAALA_DCT4 experiment.
This experiment replaces the 4-point Type-II scaled-output vp9 DCT
 transform with the 4-point Type-II orthonormal Daala DCT transform.
Right now the CONFIG_DAALA_DCT4 experiment depends on CONFIG_DCT_ONLY
 as it does not add an orthonormal 4-point DST.

subset-1:

master-dct_only@2017-02-21T02:57:28.585Z ->
  daala_dct4-dct_only@2017-02-21T14:40:29.830Z

   PSNR | PSNR Cb | PSNR Cr | PSNR HVS |   SSIM | MS SSIM | CIEDE 2000
-0.0014 | -0.0036 |  0.1561 |   0.0134 | 0.0135 |  0.0109 |     0.0506

objective-1-fast:

master-dct_only@2017-02-20T16:54:03.578Z ->
 daala_dct4-dct_only@2017-02-21T14:58:30.647Z

   PSNR | PSNR Cb | PSNR Cr | PSNR HVS |    SSIM | MS SSIM | CIEDE 2000
-0.0323 | -0.0161 | -0.2828 |  -0.0265 | -0.0516 | -0.0573 |    -0.0411

Change-Id: Idef8f6e5525037d5bbb2d0927675c21d1922d69a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,8 @@ setup_aom_scale_targets()
 setup_av1_targets()
 
 # Make all library targets depend on aom_rtcd to make sure it builds first.
+    "${AOM_ROOT}/av1/common/daala_tx.c"
+    "${AOM_ROOT}/av1/common/daala_tx.h"
 foreach (aom_lib ${AOM_LIB_TARGETS})
   if (NOT "${aom_lib}" STREQUAL "aom_rtcd")
     add_dependencies(${aom_lib} aom_rtcd)
