Build libaom without internal deps in CMake.
This applies only to the static build. Change the internal lib
targets so that external apps need link only libaom.

BUG=aomedia:76,aomedia:609

Change-Id: I38862fcd90cb585300b6b23e8558f78a1934750f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -477,3 +477,7 @@ add_custom_target(dist
 if (ENABLE_DOCS)
   add_dependencies(dist docs)
 endif ()
+
+### Hacking together libaom static that doesn't have internal deps...
+get_target_property(aom_libs aom LINK_LIBRARIES)
+message("========aom_libs=\n${aom_libs}\n")
