--- a/project.config
+++ b/project.config
@@ -67,5 +67,6 @@
 	label-Verified = -1..+1 group aom-committers
 	pushMerge = group aom-committers
 [access "refs/heads/master"]
+	exclusiveGroupPermissions = push submit
 [access "refs/for/refs/heads/main"]
 	pushMerge = group aom-releasers
