CMakeLists.txt: exclude CMAKE_ASM_COMPILER from src list
The match added in
  82af7b00e6 Exclude ASM_NASM variables for srcs generation
included a trailing '_' which wouldn't match this variable.

Bug: aomedia:3493
Change-Id: I71d1a688f79db0216258c8e34e96e6f22027697b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -940,7 +940,7 @@ get_cmake_property(all_cmake_vars VARIABLES)
 foreach(var ${all_cmake_vars})
   if("${var}" MATCHES "SOURCES$\|_INTRIN_\|_ASM_"
      AND NOT "${var}" MATCHES "DOXYGEN\|LIBYUV\|_PKG_\|TEST"
-     AND NOT "${var}" MATCHES "_ASM_NASM\|_ASM_COMPILER_")
+     AND NOT "${var}" MATCHES "_ASM_NASM\|_ASM_COMPILER")
     list(APPEND aom_source_vars ${var})
   endif()
 endforeach()
